--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 		<link rel="stylesheet" href="css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,800' rel='stylesheet' type='text/css'>
 	</head>
-	<body>
+	<body class="landing">
 		<header>
 				<h1>Relaxr</h1>
 				<h2>Get piece of mind with a single tap</h2>
             <div class="get-it-now"> 
-                <a id="button">Get it Now</a>
+                <a class="button1">Get it Now</a>
             </div>       
         </header>
+        <main>
         <div class="benefits">        
                 <h3>Benefits</h3>
             <p>The perfect personal assistant. Relaxr does your job</p> 
@@ -31,20 +32,21 @@
                     <li>Does all your work for you with our new revolutionary AI technology</li>
                 </ul>
         </div>    
-        <div id="testimonial">
-            <p>"Relaxr changed my life. I've been able</p>
-            <p>to travle the world, spend limited time</p>
-            <p>working, and my boss keeps thanking</p>
-            <p>me for chrushing work".</p>
+        <div class="testimonial">
+            <p>"Relaxr changed my life. I've been able<br> 
+            to travel the world, spend limited time<br>
+            working, and my boss keeps thanking<br>
+            me for chrushing work".</p>
             <span>- Amanda, Intuit</span>
             </div>
         <div class="sign-up-now"> 
-                <a id="button2">Sign up Now!</a>
+                <a class="button2">Sign up Now!</a>
             </div> 
+        </main>
         <footer>
                 <h4>Relaxr</h4>
-                <a href="www.twitter.com/relaxr"><img src="images/twitter.png" /></a>
-                <a href="www.facebook.com/relaxr"><img src="images/facebook.png" /></a>
+                <a href="www.twitter.com/relaxr"><img src="images/twitter.png"></a>
+                <a href="www.facebook.com/relaxr"><img src="images/facebook.png"></a>
 				<p>Copyright 2016. Relaxr</p>
         </footer>
 	</body>
